--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
+	runtimeOnly 'mysql:mysql-connector-java'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
