--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+dependencies {
+	implementation 'mysql:mysql-connector-java'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+}
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
